--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>wow</title>
-  </head>
-  <body>
-    <h1>wow</h1>
-    <script src="lib.js"></script>
-    <script src="app.js"></script>
-    <script>require('app');</script>
-  </body>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>WOW</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    </head>
+    <body style="margin:0;padding:0;" onload="app.run()">
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <canvas id='app' style="margin:auto;padding:0;"></canvas>
+        <script src="lib.js"></script>
+        <script src="app.js"></script>
+        <script>var app = require('app');</script>
+    </body>
 </html>
